fix: full, closable일 때 아이콘이 오른쪽 끝으로 안가는 이슈 해결

--- a/stories/components/message/Callout.stories.mdx
+++ b/stories/components/message/Callout.stories.mdx
@@ -250,6 +250,15 @@ export const Default = (args, { argTypes }) => ({
                 <div>
                     <Callout v-if="showMediumCallout" size="medium" closable @closeCallout="showMediumCallout = false">문구가 들어가는 자리입니다.</Callout>
                 </div>
+                <div>
+                    <Callout v-if="showXSmallCallout" size="xsmall" full closable @closeCallout="showXSmallCallout = false">문구가 들어가는 자리입니다.</Callout>
+                </div>
+                <div>
+                    <Callout v-if="showSmallCallout" size="small" full closable @closeCallout="showSmallCallout = false">문구가 들어가는 자리입니다.</Callout>
+                </div>
+                <div>
+                    <Callout v-if="showMediumCallout" size="medium" full closable @closeCallout="showMediumCallout = false">문구가 들어가는 자리입니다.</Callout>
+                </div>
             </div>
             `,
         components: { Callout },
