--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -168,6 +168,9 @@ export const Default = (args, { argTypes }) => ({
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
                           <IconWrapper component="Icon" name="IconFileMediumLine" />
+                          <IconWrapper component="Icon" name="IconBlockMediumLine" />
+                          <IconWrapper component="Icon" name="IconSirenMediumLine" />
+                          <IconWrapper component="Icon" name="IconWritingMediumLine" />
                         </div>
                     </div>
                     <!--large-->
@@ -235,6 +238,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconVideoLargeFill" />
                           <IconWrapper component="Icon" name="IconStarLargeLine" />
                           <IconWrapper component="Icon" name="IconStarLargeFill" />
+                          <IconWrapper component="Icon" name="IconThreeDotLargeFill" />
                       </div>
                     </div>
                     <!--x-large-->
