--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -124,7 +124,7 @@ export const Default = (args, { argTypes }) => ({
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
                           <IconWrapper component="Icon" name="IconCheckMediumLine" />
-                          <IconWrapper component="Icon" name="IconSelectedMediumLine" />
+                          <IconWrapper component="Icon" name="IconCheckRoundMediumLine" />
                           <IconWrapper component="Icon" name="IconCheckRoundMediumFill" />
                           <IconWrapper component="Icon" name="IconQuestionMarkMediumLine" />
                           <IconWrapper component="Icon" name="IconQuestionMarkMediumFill" />
