--- a/stories/components/message/Alert.stories.mdx
+++ b/stories/components/message/Alert.stories.mdx
@@ -1,5 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import Alert, { AlertTypes } from '@/components/components/message/Alert';
+import Icon from "@/components/elements/core/icon/Icon";
+import { colorKeys } from '@/utils/constants/color';
 
 <Meta
     title="Message/Alert"
@@ -15,7 +17,7 @@ import Alert, { AlertTypes } from '@/components/components/message/Alert';
         text: {
             description: "alert text",
             defaultValue:
-                "공지 내용이 들어가는 영역입니다. 두 줄로 사용하지 않습니다.",
+                "[공지] PC에서는 최대 한줄이고 MOBILE에서는 최대 두줄입니다.",
             control: {
                 type: "text",
             },
@@ -24,6 +26,13 @@ import Alert, { AlertTypes } from '@/components/components/message/Alert';
             description: "닫기 버튼",
             control: {
                 type: "boolean",
+            }
+        },
+        closeButtonColor: {
+            description: "닫기 버튼 색상",
+            control: {
+                type: "text",
+                options: colorKeys,
             }
         }
     }}
@@ -58,16 +67,34 @@ export const Default = (args, { argTypes }) => ({
     <Story name="All" height="200px">
         {{
             template: `
-                <div style="width: 100%; position: relative">
-                    <Alert style="position: absolute;">
-                        공지 내용이 들어가는 영역입니다. 두 줄로 사용하지 않습니다.
+                <div style="width: 100%; position: relative; height: 600px">
+                    <Alert style="position: absolute;" type="information">
+                      [공지] PC에서는 최대 한줄이고 MOBILE에서는 최대 두줄입니다.
                     </Alert>
-                    <Alert style="position: absolute; top: 100px" type="warning">
-                        공지 내용이 들어가는 영역입니다. 두 줄로 사용하지 않습니다.
+                    <Alert style="position: absolute; top: 100px" type="notice">
+                      [공지] PC에서는 최대 한줄이고 MOBILE에서는 최대 두줄입니다.
+                    </Alert>
+                    <Alert style="position: absolute; top: 200px" type="success">
+                      [공지] PC에서는 최대 한줄이고 MOBILE에서는 최대 두줄입니다.
+                    </Alert>
+                    <Alert style="position: absolute; top: 300px" type="error">
+                      [공지] PC에서는 최대 한줄이고 MOBILE에서는 최대 두줄입니다.
+                    </Alert>
+                    <Alert style="position: absolute; top: 400px" type="image" />
+                    <Alert style="position: absolute; top: 500px" type="notice">
+                      <template v-slot:icon>
+                        <Icon :name="customIconName" color="primary" />
+                      </template>
+                      [커스텀 예시] 코멘토 유저분들 사랑합니다~! 건강하고 행복하세요~~
                     </Alert>
                 </div>
             `,
-            components: { Alert },
+            computed: {
+                customIconName() {
+                    return this.isMobile ? 'IconStarMediumFill' : 'IconStarLargeFill';
+                }
+            },
+            components: { Alert, Icon },
         }}
     </Story>
 </Canvas>
@@ -78,20 +105,28 @@ export const Default = (args, { argTypes }) => ({
         {{
             data() {
                 return {
-                    showAlert: true,
+                    showAlert1: true,
+                    showAlert2: true,
+                    showAlert3: true,
+                    showAlert4: true,
+                    showAlert5: true,
                 };
             },
             template: `
-              <div style="width: 100%; position: relative">
-                <Alert
-                  v-if="showAlert"
-                  type="information"
-                  closable
-                  @close="showAlert = false"
-                  style="position: absolute"
-                >
-                  공지 내용이 들어가는 영역입니다. 두 줄로 사용하지 않습니다.
-                </Alert>
+              <div style="width: 100%; position: relative; height: 500px">
+                  <Alert v-if="showAlert1" style="position: absolute;" type="information" closable @close="showAlert1 = false">
+                    [공지] PC에서는 최대 한줄이고 MOBILE에서는 최대 두줄입니다.
+                  </Alert>
+                  <Alert v-if="showAlert2" style="position: absolute; top: 100px" type="notice" closable @close="showAlert2 = false">
+                    [공지] PC에서는 최대 한줄이고 MOBILE에서는 최대 두줄입니다.
+                  </Alert>
+                  <Alert v-if="showAlert3" style="position: absolute; top: 200px" type="success" closable @close="showAlert3 = false">
+                    [공지] PC에서는 최대 한줄이고 MOBILE에서는 최대 두줄입니다.
+                  </Alert>
+                  <Alert v-if="showAlert4" style="position: absolute; top: 300px" type="error" closable @close="showAlert4 = false">
+                    [공지] PC에서는 최대 한줄이고 MOBILE에서는 최대 두줄입니다.
+                  </Alert>
+                  <Alert v-if="showAlert5" style="position: absolute; top: 400px" type="image" closable close-button-color="white" @close="showAlert5 = false" />
               </div>
             `,
             components: { Alert }
