--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -169,6 +169,7 @@ export const Default = (args, { argTypes }) => ({
                         <div style="display: flex; flex-wrap: wrap;">
                           <IconWrapper component="Icon" name="IconFileMediumLine" />
                           <IconWrapper component="Icon" name="IconBlockMediumLine" />
+                          <IconWrapper component="Icon" name="IconUnblockMediumLine" />
                           <IconWrapper component="Icon" name="IconSirenMediumLine" />
                           <IconWrapper component="Icon" name="IconWritingMediumLine" />
                         </div>
