--- a/stories/components/dataDisplay/Reply.stories.mdx
+++ b/stories/components/dataDisplay/Reply.stories.mdx
@@ -3,6 +3,7 @@ import Reply from '@/components/components/dataDisplay/Reply';
 import UserInformation from '@/components/components/dataDisplay/content/UserInformation';
 import Avatar from '@/components/components/dataDisplay/Avatar';
 import Icon from '@/components/elements/core/icon/Icon';
+import { colorKeys } from "@/utils/constants/color";
 
 <Meta
 	title="Data Display/Reply"
@@ -15,7 +16,10 @@ import Icon from '@/components/elements/core/icon/Icon';
 		},
 		fontColor: {
 			description: '댓글 색상',
-			control: { type: 'text' },
+      control: {
+        type: 'select',
+        options: colorKeys,
+      },
 		},
 		date: {
 			description: '날짜',
