--- a/stories/components/message/Banner.stories.mdx
+++ b/stories/components/message/Banner.stories.mdx
@@ -49,7 +49,7 @@ export const Default = (args, { argTypes }) => ({
                     <div style="background-color: #f3f4f5; height: 100%;"></div>
                 </template>
                 <template v-slot:button v-if="type === 'full'">
-                    <Button size="xlarge">CTA BTN</Button>
+                    <Button size="xlarge" full>CTA BTN</Button>
                 </template>
             </Banner>
         </div>`,
@@ -89,7 +89,7 @@ export const Default = (args, { argTypes }) => ({
                     <div style="background-color: #f3f4f5; height: 100%;"></div>
                 </template>
                 <template v-slot:button>
-                    <Button size="xlarge">CTA BTN</Button>
+                    <Button size="xlarge" full>CTA BTN</Button>
                 </template>
             </Banner>
             </div>`,
