fix: error props story 연동

--- a/stories/components/dataEntry/Textarea.stories.mdx
+++ b/stories/components/dataEntry/Textarea.stories.mdx
@@ -50,6 +50,7 @@ export const Default = (args, { argTypes }) => ({
                       :max-height="maxHeight"
                       :min-height="minHeight"
                       :read-only="readOnly"
+                      :error="error"
                       :value.sync="valueData"/>
         </div>`,
 });
