fix: mdx indent 조정

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -76,7 +76,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconPlusSmallLine"/>
                             <IconWrapper component="Icon" name="IconCloseSmallLine"/>
                             <IconWrapper component="Icon" name="IconSearchSmallLine"/>
-							<IconWrapper component='Icon' name="IconWritingSmallLine"/>
+							<IconWrapper component="Icon" name="IconWritingSmallLine"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconCheckSmallLine"/>
