feat: error props story에 연동

--- a/stories/components/dataEntry/Textarea.stories.mdx
+++ b/stories/components/dataEntry/Textarea.stories.mdx
@@ -31,6 +31,12 @@ import Textarea, { textareaTypes } from '@/components/components/dataEntry/Texta
                 type: "boolean",
             },
         },
+        error: {
+            description: "에러 타입인지",
+            control: {
+                type: "boolean",
+            },
+        },
     }}
 />
 
