feat: test commit

--- a/stories/elements/utility/Divider.stories.mdx
+++ b/stories/elements/utility/Divider.stories.mdx
@@ -42,9 +42,11 @@ export const Default = (args, { argTypes }) => ({
                       width: 100%;
                       text-align: center;"
                       >300 x 300 사이즈 기준</p>
-        <Divider :type="type"
-                 :vertical="vertical"
-                 :color="color"/>
+        <Divider
+          :type="type"
+          :vertical="vertical"
+          :color="color"
+        />
     </div>`,
 });
 
