feat: textarea story description 수정

--- a/stories/components/dataEntry/Textarea.stories.mdx
+++ b/stories/components/dataEntry/Textarea.stories.mdx
@@ -32,7 +32,7 @@ import Textarea, { textareaTypes } from '@/components/components/dataEntry/Texta
             },
         },
         error: {
-            description: "에러 타입인지",
+            description: "에러 타입인지(outline type일 때만 가능)",
             control: {
                 type: "boolean",
             },
