Feature/add textarea outline error (#875)
* feat: error 상태 추가 & 코드 정리

* feat: error 상태 story 추가

* fix: error props story 연동

* fix: Hint 노출조건 추가

* feat: error props story에 연동

* feat: placeholder 색상 red100으로 변경

* feat: textarea story description 수정

* fix: hintMessage story 연동

* refactor: props convention에 맞게 수정

--- a/stories/components/dataEntry/Textarea.stories.mdx
+++ b/stories/components/dataEntry/Textarea.stories.mdx
@@ -31,6 +31,16 @@ import Textarea, { textareaTypes } from '@/components/components/dataEntry/Texta
                 type: "boolean",
             },
         },
+        error: {
+            description: "에러 타입인지(outline type일 때만 가능)",
+            control: {
+                type: "boolean",
+            },
+        },
+        hintMessage: {
+            description: "에러 힌트 메시지",
+            control: { type: "text" },
+        },
     }}
 />
 
@@ -50,6 +60,8 @@ export const Default = (args, { argTypes }) => ({
                       :max-height="maxHeight"
                       :min-height="minHeight"
                       :read-only="readOnly"
+                      :error="error"
+                      :hint-message="hintMessage"
                       :value.sync="valueData"/>
         </div>`,
 });
@@ -63,3 +75,21 @@ export const Default = (args, { argTypes }) => ({
 </Story>
 
 <ArgsTable story="Default" />
+
+### Error
+
+<Canvas>
+    <Story name="Align" height="200px">
+        {{
+            template: `
+                <div style="width:300px">
+                    <Textarea
+                        type="outline"
+                        error
+                    />
+                </div>
+            `,
+            components: { Textarea },
+        }}
+    </Story>
+</Canvas>
