--- a/stories/components/message/modal/FullscreenModal.stories.mdx
+++ b/stories/components/message/modal/FullscreenModal.stories.mdx
@@ -228,7 +228,7 @@ export const Default = (args, { argTypes }) => ({
                         :show.sync="show"
                         direction="left"
                         show-action-button
-                        color="light-primary"
+                        button-color="light-primary"
                         :success-callback="() => { show = false; }"
                     >
                         <template v-slot:title>
